--- a/register-pet/index.html
+++ b/register-pet/index.html
@@ -35,7 +35,9 @@
      
 
         <div class="show-video d-none">
-            <!-- <div class="photo"></div> -->
+             <div class="photo">
+                <p><img id="imageTag" width="240" height="180"></p>
+             </div>
             <p><video autoplay style="height: 380px; width: 298px;"></video></p>
             <section class="info-photo">
                 <i class="bi bi-images photo-gallery" ></i>
