--- a/register-pet/index.html
+++ b/register-pet/index.html
@@ -35,8 +35,8 @@
      
 
         <div class="show-video d-none">
-             <div class="photo">
-                <p><img id="imageTag" width="240" height="180"></p>
+             <div class="photo d-none" id="imageTag">
+              
              </div>
             <p><video autoplay style="height: 380px; width: 298px;"></video></p>
             <section class="info-photo">
