--- a/register-pet/index.html
+++ b/register-pet/index.html
@@ -35,9 +35,9 @@
      
 
         <div class="show-video d-none">
-             <div class="photo d-none" id="imageTag">
+             <img class="photo d-none" id="imageTag">
               
-             </div>
+             </img>
             <p><video autoplay style="height: 380px; width: 298px;"></video></p>
             <section class="info-photo">
                 <i class="bi bi-images photo-gallery" ></i>
