--- a/register-pet/index.html
+++ b/register-pet/index.html
@@ -35,9 +35,7 @@
      
 
         <div class="show-video d-none">
-             <img class="photo d-none" id="imageTag">
-              
-             </img>
+             <img class="photo d-none" id="imageTag"></img>
             <p><video autoplay style="height: 380px; width: 298px;"></video></p>
             <section class="info-photo">
                 <i class="bi bi-images photo-gallery" ></i>
