--- a/register-pet/index.html
+++ b/register-pet/index.html
@@ -22,7 +22,7 @@
         </section>
 
         <section class="confirm-photo d-none">
-            <img class="dog-photo d-none" id="imageTag"></img>
+            <img class="dog-photo" id="imageTag"></img>
             <p >Tirar outra foto</p>
         </section>
      
