--- a/service-pet/index.html
+++ b/service-pet/index.html
@@ -48,6 +48,20 @@
        
       
     </main>
-  
+    <script>
+         function getParameter(theParameter) {
+            var params = window.location.search.substr(1).split('&');
+
+            for (var i = 0; i < params.length; i++) {
+                var p = params[i].split('=');
+                if (p[0] == theParameter) {
+                    return decodeURIComponent(p[1]);
+                }
+            }
+            return false;
+            }
+            var valorHidSelProduto = getParameter('id')
+            alert(valorHidSelProduto);
+    </script>
 </body>
 </html>
