--- a/list-pets/index.html
+++ b/list-pets/index.html
@@ -12,9 +12,9 @@
 
 <body>
   <main class="box">
-    <section class="back">
+    <!-- <section class="back">
       <i class="bi bi-arrow-left"></i>
-    </section>
+    </section> -->
     <h2 class="font2 w-title">Qual pet vamos cuidar hoje?</h2>
     <p class="desc-add">Se o seu pet não estiver na lista, pode adicioná-lo clicando no botão abaixo.</p>
 
