--- a/chamados-pet/index.html
+++ b/chamados-pet/index.html
@@ -6,6 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="../style.css" type="text/css">
     <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css">
+  	<meta name="mobile-web-app-capable" content="yes">
+		<meta name="msapplication-TileImage" content="images/logos/144.png">
+		<meta name="msapplication-TileColor" content="#31506F">
+		<meta name="theme-color" content="#4D5360" />
+		<link rel="shortcut icon" sizes="192x192" href="../images/logos/192.png">
+		<link rel="shortcut icon" sizes="128x128" href="images/logos/128.png">
+	  
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-title" content="99 Pets">
+		<link rel="apple-touch-icon" href="images/logos/144.png">
+		<link rel="apple-touch-icon" href="touch-icon-iphone.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="../images/logos/152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="../images/logos/180.png">
+		<link rel="apple-touch-icon" sizes="167x167" href="../images/logos/167.png">
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+  
     <title>99 Pets</title>
 </head>
 <body>
