--- a/info-location/index.html
+++ b/info-location/index.html
@@ -50,8 +50,10 @@
     
         <h2 class="font2 w-title">Pet Shop 1</h2>
         <p class="desc-add mb">Especializado em Tosa, o Pet Shop é bastante recomendado para animais de pequeno e grande porte, proporcionando cortes delicados e muito bem feitos.</p>
-        <p class="price"><i class="bi bi-circle-fill"></i> <span class="service">Tosa</span> - R$50,00 <img src="../images/icon-cut.png" alt=""></p>
-        <button class="btn-main choose-location">Escolher esse</button>
+        <div class="bottom">
+            <p class="price "><i class="bi bi-circle-fill"></i> <span class="service">Tosa</span> - R$50,00 <img src="../images/icon-cut.png" alt=""></p>
+            <button class="btn-main choose-location">Escolher esse</button>
+        </div>
       
     </main>
     <section class="confirm-box d-none">
