--- a/register-pet/index.html
+++ b/register-pet/index.html
@@ -61,7 +61,7 @@
             <p><video autoplay style="height: 380px; width: 298px;"></video></p>
             <section class="info-photo">
                 <span class="gallery">
-                    <input id="img-input" type="file" name="imagem" accept=".jpg, .jpeg, .png">
+                    <input id="img-input" type="file" name="imagem" accept=".png,.jpg,.jpeg">
                     <i class="bi bi-images photo-gallery" ></i>
                 </span>
                
