--- a/login/index.html
+++ b/login/index.html
@@ -30,7 +30,7 @@
         <h2 class="title">Login</h2>
         <section class="form">
             <form action="" class="form-login">
-                <input type="text" name="email" placeholder="E-mail" class="input" required>
+                <input type="email" name="email" placeholder="E-mail" class="input" required>
                 <input type="password" name="password" placeholder="Senha" class="input" required>
                 <input type="submit" value="Entrar" class="btn-main bottom submit">
             </form>
