--- a/list-pets/index.html
+++ b/list-pets/index.html
@@ -41,7 +41,6 @@
         
             <a href="#"><i class="bi bi-person"></i> Meu Perfil</a>
               <a  href="#"><i class="bi bi-postcard-heart"></i> Meus animais</a>
-              <a href="../service-pet/index.html"><i class="bi bi-bag-plus"></i> Serviços</a>
               <a href="../list-locations/index.html"><i class="bi bi-shop"></i> Pet Shops</a>
               <a href="../contact/index.html"><i class="bi bi-people"></i> Equipe</a>
        
@@ -50,7 +49,7 @@
         </nav>
       </div>
       <img src="../images/mini.svg" alt="Mini logo 99 Pets" class="mini-logo">
-      <i class="bi bi-arrow-left"></i>
+      <i class="bi bi-arrow-left back-page"></i>
     </section> 
     <h2 class="font2 w-title">Qual pet vamos<br> cuidar hoje?</h2>
     <p class="desc-add">Se o seu pet não estiver na lista, pode adicioná-lo clicando no botão abaixo.</p>
