--- a/register/index.html
+++ b/register/index.html
@@ -31,11 +31,11 @@
         <section class="form">
             <form class="r-form">
                 <input type="text" name="name" placeholder="Nome Completo" class="input" required>
-                <input type="text" name="email" placeholder="E-mail" class="input" required>
+                <input type="email" name="email" placeholder="E-mail" class="input" required>
                 <input type="password" name="password" placeholder="Senha" class="input" required>
                 <input type="password" name="password" placeholder="Confirme sua senha" class="input" required>
 
-                <input type="submit" value="Próximo" class="btn-main bottom">
+                <input type="submit" value="Próximo" class="btn-main">
              
             </form>
         </section>
