Projeto Final (Parte 1)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 		<link rel="manifest" href="manifest.json">
 
+    <meta name="description" content="Um app para quem tem animais de estimação e não tem muito tempo para ficar indo até os Pet Shops.">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="msapplication-TileImage" content="images/logos/144.png">
 		<meta name="msapplication-TileColor" content="#31506F">
